--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 Django==1.10.2
 django-appconf==1.0.1
+django-autoslug==1.9.3
+django-cleanup==0.4.2
+django-grappelli==2.8.2
 django-image-cropping==1.0.3
 django-resized==0.3.5
 easy-thumbnails==2.3
 Pillow==3.4.2
+pytz==2016.7
 six==1.10.0
 sorl-thumbnail==12.4a1
