--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ db.sqlite3
 main/__pycache__/
 main/migrations/__pycache__/
 main/templatetags/__pycache__/
-media/
+media/*
 news/__pycache__/
 news/migrations/0001_initial.py
 news/migrations/__pycache__/
