--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
+defusedxml==0.4.1
 Django==1.10.2
 django-appconf==1.0.1
 django-autoslug==1.9.3
 django-cleanup==0.4.2
 django-grappelli==2.8.2
-django-image-cropping==1.0.3
+django-image-cropping==1.0.4
 django-resized==0.3.5
 django-tinymce==2.4.0
 django-tinymce4==3.0.2
 easy-thumbnails==2.3
+oauthlib==2.0.1
 Pillow==3.4.2
-pytz==2016.7
+PyJWT==1.4.2
+python-social-auth==0.2.21
+python3-openid==3.0.10
+pytz==2016.10
+requests==2.12.4
+requests-oauthlib==0.7.0
 six==1.10.0
 sorl-thumbnail==12.4a1
